fix : white space on header

--- a/css/header.css
+++ b/css/header.css
@@ -17,7 +17,6 @@ header{
 
 .link{
     height: 100%;
-    width: 40vw;
     display: flex;
     align-items: center;
     justify-content: center;
